--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "7.0.0",
+    "@types/node": "^10.11.4",
+    "brmasker-ionic-3": "^1.5.3",
+    "cordova-android": "^7.1.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -42,11 +44,11 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "text-mask-addons": "^3.8.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
-    "@ionic/lab": "1.0.10",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
